# nodus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  LICENSE  Makefile  ONBOARDING.md  README.md  docker-compose.yml
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
src/backend/app/: auth.py  auth_entra.py  cli.py  config.py  db.py  main.py  time_utils.py
src/backend/app/models/: __init__.py  alias.py  api_key.py  assessment.py  auth_session.py  cycle.py  factsheet.py  initiative.py  media_asset.py  mfa_challenge.py  movement_event.py  party.py  peer_reference.py  person.py  relation.py  segment.py  setting.py  source.py  strategic_innovation_field.py  technology.py  topic.py  topic_person_link.py  user.py
src/backend/app/routers/: __init__.py  api_keys.py  auth.py  auth_entra.py  backup.py  cycles.py  initiatives.py  media.py  movements.py  parties.py  peer_import.py  peer_references.py  persons.py  radar.py  registry.py  relations.py  segments.py  settings.py  users.py
src/backend/app/schemas/: __init__.py  api_key.py  assessment.py  auth.py  cycle.py  factsheet.py  initiative.py  movement_event.py  peer_import.py  peer_reference.py  person.py  radar.py  relation.py  segment.py  setting.py  source.py  technology.py  user.py
src/backend/app/scripts/: create_user.py  migrate_v2.py
src/backend/app/seed/: __init__.py  dummy.py  importer.py
src/backend/app/services/: backup_service.py  dedup.py  deliverables.py  media.py  movements.py  normalize.py  peer_import.py  peer_references.py  persons.py  ring_movement.py  visibility.py
src/backend/tests/: conftest.py  test_anonymous_flow.py  test_auth.py  test_auth_entra.py  test_auth_providers.py  test_config.py  test_db_lifecycle.py  test_demo_seed_gate.py  test_health.py  test_models_v2.py  test_public_reader_disabled.py
src/backend/tests/test_routers_v2/: test_api_keys_v2.py  test_backup.py  test_cycles_v2.py  test_initiatives_v2.py  test_media_v2.py  test_peer_import.py  test_peer_references_v2.py  test_persons_v2.py  test_radar_v2.py  test_registry_v2.py  test_segments_v2.py  test_users_v2.py
src/backend/tests/test_services_v2/: conftest.py  test_backup_service.py  test_dedup.py  test_deliverables.py  test_media.py  test_peer_references.py  test_persons.py  test_record_event.py  test_ring_movement.py
src/backend/tests/test_visibility_v2/: conftest.py  test_radar_visibility.py  (+2 more)
(+238 files in other folders)
