[project]
name = "nodus-backend"
dynamic = ["version"]
description = "Nodus Technology Radar backend API"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Dennis Bakhuis" },
]
keywords = ["technology-radar", "fastapi", "innovation", "scouting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "sqlmodel>=0.0.38",
    "pydantic>=2.13.4",
    "uvicorn[standard]>=0.46.0",
    "rapidfuzz>=3.14.5",
    "pillow>=12.2.0",
    "python-multipart>=0.0.28",
    "bcrypt>=5.0.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "cryptography>=48.0.0",
    "pydantic-settings>=2.14.1",
    "authlib>=1.7.2",
    "joserfc>=1.6.5",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/dennisbakhuis/nodus"
Repository = "https://github.com/dennisbakhuis/nodus"
Issues = "https://github.com/dennisbakhuis/nodus/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
# Single canonical source: repo-root VERSION file.
source = "regex"
path = "../../VERSION"
pattern = "^(?P<version>.+)$"

[tool.hatch.build.targets.wheel]
packages = ["app"]
# VERSION lives at the repo root but the wheel needs to include it so the
# installed package can still resolve a version when metadata is unavailable
# (e.g. inside containers that didn't install the project).
force-include = { "../../VERSION" = "app/VERSION" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "mypy>=2.1.0",
    "playwright>=1.59.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "E501"]
"app/seed/dummy.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
